--- a/JFX_UI/src/jfx/ui/HeaderComp/HeaderComp.fxml
+++ b/JFX_UI/src/jfx/ui/HeaderComp/HeaderComp.fxml
@@ -4,45 +4,40 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" spacing="8.0" stylesheets="@HeaderCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.HeaderComp.HeaderCompController">
+<HBox alignment="CENTER_LEFT" spacing="8.0" stylesheets="@HeaderCompCSS.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jfx.ui.HeaderComp.HeaderCompController">
     <children>
-        <Label id="titleLbl" fx:id="titleLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Yuval &amp; Roy represents: The best S - Emulator" textAlignment="CENTER">
+        <Button id="LoadBTN" fx:id="loadButton" maxHeight="1.7976931348623157E308" minWidth="100.0" mnemonicParsing="false" onAction="#handleLoadButton" text="Load file">
             <font>
-                <Font size="18.0" />
+                <Font size="14.0" />
+            </font>
+        </Button>
+        <Label id="PathLbl" fx:id="filePathLabel" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" text="Current file path:" textAlignment="JUSTIFY" HBox.hgrow="ALWAYS">
+            <HBox.margin>
+                <Insets left="4.0" />
+            </HBox.margin>
+            <font>
+                <Font size="14.0" />
             </font>
         </Label>
-        <HBox alignment="CENTER_LEFT" spacing="8.0">
-            <children>
-                <Button id="LoadBTN" fx:id="loadButton" maxHeight="1.7976931348623157E308" minWidth="100.0" mnemonicParsing="false" onAction="#handleLoadButton" text="Load file">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Button>
-                <Label id="PathLbl" fx:id="filePathLabel" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" text="Current file path:" textAlignment="JUSTIFY" HBox.hgrow="ALWAYS">
-                    <opaqueInsets>
-                        <Insets />
-                    </opaqueInsets>
-                    <HBox.margin>
-                        <Insets left="4.0" />
-                    </HBox.margin>
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Label>
-                <ProgressBar fx:id="progressBar" prefWidth="120.0" visible="false" />
-                <Label fx:id="progressLabel" minWidth="50.0" text="" textFill="#2196F3" visible="false">
-                    <font>
-                        <Font size="12.0" />
-                    </font>
-                    <HBox.margin>
-                        <Insets left="4.0" />
-                    </HBox.margin>
-                </Label>
-            </children>
-        </HBox>
+        <ProgressBar fx:id="progressBar" prefWidth="120.0" visible="false" />
+        <Label fx:id="progressLabel" minWidth="50.0" text="" textFill="#2196F3" visible="false">
+            <font>
+                <Font size="12.0" />
+            </font>
+            <HBox.margin>
+                <Insets left="4.0" />
+            </HBox.margin>
+        </Label>
+        <Button fx:id="chargeCreditsBtn" text="Charge Credits" onAction="#onChargeCreditsPress">
+            <font>
+                <Font size="13.0" />
+            </font>
+        </Button>
+
+        <TextField fx:id="creditsField" promptText="Credits" prefWidth="80.0"/>
     </children>
-</VBox>
+</HBox>
